src/test/ui/reachable/expr_add.stderr
error: unreachable expression
  --> $DIR/expr_add.rs:26:13
   |
LL |     let x = Foo + return; //~ ERROR unreachable
   |             ^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_add.rs:12:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

